# kokoc_test

./: README.md  pyproject.toml  requirements.txt
testing/survey/: admin.py  models.py  urls.py  views.py
testing/survey/migrations/: 0001_initial.py  0002_user_count_test.py  0003_auto_20230309_1213.py  0004_color_rgb_code.py
testing/templates/: base.html
testing/templates/includes/: footer.html  header.html
testing/templates/survey/: all_users.html  index.html  profile.html  questions.html  result.html
testing/templates/users/: login.html
testing/testing/: settings.py  urls.py
testing/users/: forms.py  urls.py  views.py
